@@ -2408,7 +2408,7 @@ static MODCMD_FUNC(cmd_stats_alerts) {
     reply("OSMSG_ALERTS_BAR");
     for (it = dict_first(opserv_user_alerts); it; it = iter_next(it)) {
         alert = iter_data(it);
-        if(m && (!match_ircglob(alert->text_discrim, m) && strcasecmp(alert->owner, m)) )
+        if(m && (!match_ircglob(alert->text_discrim, m) && strcasecmp(alert->owner, m) && strcasecmp(iter_key(it), m)))
              continue; /* not a match to requested filter */
         switch (alert->reaction) {
         case REACT_NOTICE: reaction = "notice"; break;
