@@ -1,6 +1,16 @@
 /***********************************************************************
 X3 ChangeLog
 
+2007-03-20  Alex Schumann  <rubin@afternet.org>
+
+        * src/opserv.c: fix for stats alerts filtering
+
+	* src/chanserv.c: dont kick lamers if they are currently exempt (+e) 
+
+	* src/x3ldap.c: fix ldap error code to string
+
+	* src/nickserv.c: (comment to add LOC logging)
+
 2007-02-26  Alex Schumann  <rubin@afternet.org>
 
 	* src/nickserv.c: fix bug with LOC logic and ldap.
